Implemented SmartPtr and SmartHandle class Migrated some code (Providers, Skins, ScheduledRecordings) to use them

--- a/DScaler/DScaler/DScaler2005.vcproj
+++ b/DScaler/DScaler/DScaler2005.vcproj
@@ -9065,6 +9065,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\SmartHandle.h"
+				>
+			</File>
+			<File
+				RelativePath=".\SmartPtr.h"
+				>
+			</File>
+			<File
 				RelativePath="SoundChannel.h"
 				>
 			</File>
