Output debug symbols in release mode

--- a/DScaler/DScaler/DScaler2005.vcproj
+++ b/DScaler/DScaler/DScaler2005.vcproj
@@ -70,6 +70,7 @@
 				BrowseInformationFile=".\Release/"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
+				DebugInformationFormat="3"
 				CompileAs="0"
 			/>
 			<Tool
@@ -90,8 +91,8 @@
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				AdditionalLibraryDirectories="..\ThirdParty\LibTiff\,..\ThirdParty\LibJpeg\"
-				GenerateMapFile="true"
-				MapFileName="..\Release/DScaler.map"
+				GenerateDebugInformation="true"
+				GenerateMapFile="false"
 				SubSystem="2"
 				TargetMachine="1"
 			/>
