Turn off manifests stage in Express build to bypass toolchain errors

--- a/DScaler/FreqExtract/FreqExtract2005.vcproj
+++ b/DScaler/FreqExtract/FreqExtract2005.vcproj
@@ -260,6 +260,7 @@
 			/>
 			<Tool
 				Name="VCManifestTool"
+				EmbedManifest="false"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -349,6 +350,7 @@
 			/>
 			<Tool
 				Name="VCManifestTool"
+				EmbedManifest="false"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
