--- a/DScaler/PlugTest/PlugTest2005.vcproj
+++ b/DScaler/PlugTest/PlugTest2005.vcproj
@@ -269,6 +269,7 @@
 			/>
 			<Tool
 				Name="VCManifestTool"
+				EmbedManifest="false"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -360,6 +361,7 @@
 			/>
 			<Tool
 				Name="VCManifestTool"
+				EmbedManifest="false"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
