--- a/DScaler/Release/CX2388xCards.ini
+++ b/DScaler/Release/CX2388xCards.ini
@@ -2,44 +2,9 @@
 ;
 ; CX2388x card list.
 ;
-; $Log: not supported by cvs2svn $
-; Revision 1.12  2006/12/29 23:05:45  to_see
-; Updated card list
-;
-; Revision 1.11  2005/11/14 18:38:36  to_see
-; Added new Card: 10Moon TVBaby3
-;
-; Revision 1.10  2005/10/30 21:26:30  to_see
-; Added new Cards from v4l2 - not tested
-;
-; Revision 1.9  2005/10/15 20:42:21  to_see
-; Added new Cards: Leadtek WinFast DV2000 and PVR2000 (from v4l2 - not tested)
-;
-; Revision 1.8  2005/09/15 19:36:08  to_see
-; Fixed: typo in tda8275 tuner. Thanks to Keld Damsbo.
-;
-; Revision 1.7  2005/07/17 15:59:22  to_see
-; Added new tuner
-;
-; Revision 1.6  2005/05/12 19:06:59  to_see
-; Added some comments
-;
-; Revision 1.5  2005/03/06 17:04:28  to_see
-; Added new Cards: GDI Black Gold, IODATA GV-VCP3/PCI, IODATA GV/BCTV7E
-;
-; Revision 1.4  2005/03/06 13:15:06  to_see
-; Added some tuner
-;
-; Revision 1.3  2005/01/13 21:03:17  to_see
-; Added for WinFast TV2000 XP Expert Secam(L) tda9887 settings and Final()
-;
-; Revision 1.2  2004/12/29 20:17:18  to_see
-; Added TCL 2002N tuner (from v4l2)
-;
-; Revision 1.1  2004/12/25 21:55:28  to_see
-; Changed the card list to an ini file
-;
-;
+; ***** Defining a card: *****
+; see SAA713xCards.ini
+
 
 [Conexant CX23880 TV/FM EVK]
 DefaultTuner = philips_ntsc
@@ -1425,6 +1390,21 @@ UseTDA9887 ()
 	SetModes ( pal-dk   ) = { OutputPort1 = active, OutputPort2 = active }
 	SetModes ( ntsc-m   ) = { intercarrier, OutputPort1 = active }
 	SetModes ( secam-l  ) = { OutputPort2 = active }
+
+
+[ADS Tech Instant Video PCI]
+;from v4l, card #57
+AutoDetectID = 0x03901421
+DefaultTuner = absent
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+	GPIOSet ( 0x000007fa )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x000007fa )
+
 
 
 ; ***** Tuner list: (as at July 2005) *****
