new cards added

--- a/DScaler/Release/CX2388xCards.ini
+++ b/DScaler/Release/CX2388xCards.ini
@@ -1406,6 +1406,52 @@ Input ( "S-Video", svideo )
 	GPIOSet ( 0x000007fa )
 
 
+[Pinnacle PCTV HD 800i]
+;from v4l (analog part only), card #58
+AutoDetectID = 0x005111bd
+DefaultTuner = absent
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+	GPIOSet ( 0x000004fb, 0x000010ef )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x000004fb, 0x000010ef )
+
+
+[DViCO FusionHDTV 5 PCI nano]
+;from v4l (analog part only), card #59
+;Todo: Audio route
+AutoDetectID = 0xd53018ac
+DefaultTuner = absent
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+	GPIOSet ( 0x000027df )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x000027df )
+
+
+[Pinnacle Hybrid PCTV]
+;from v4l (analog part only), card #60
+AutoDetectID = 0x178812ab
+DefaultTuner = setup
+
+Input ( "Tuner", tuner)
+	MuxSelect = 0
+	GPIOSet ( 0x0000004ff, 0x0000010ff, 0x000000001 )
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+	GPIOSet ( 0x0000004fb, 0x0000010ef )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x0000004fb, 0x0000010ef )
+
 
 ; ***** Tuner list: (as at July 2005) *****
 ; auto                        -2
