new cards added

--- a/DScaler/Release/CX2388xCards.ini
+++ b/DScaler/Release/CX2388xCards.ini
@@ -755,7 +755,8 @@ Input ( "S-Video", svideo )
 	GPIOSet ( 0x00ffafff, 0x00007000, 0x00ffafff, 0x02000000 )
 
 
-[Real Angel 330]
+[PowerColor RA330]
+;v4l card #62
 ;Thanks ranieri from forum
 AutoDetectID =0xea3d14f1
 ;Note: correct tuner model is "Xceive xc3028", not supported atm.
@@ -1442,15 +1443,164 @@ DefaultTuner = setup
 
 Input ( "Tuner", tuner)
 	MuxSelect = 0
-	GPIOSet ( 0x0000004ff, 0x0000010ff, 0x000000001 )
+	GPIOSet ( 0x000004ff, 0x000010ff, 0x00000001 )
 
 Input ( "Composite", composite )
 	MuxSelect = 1
-	GPIOSet ( 0x0000004fb, 0x0000010ef )
+	GPIOSet ( 0x000004fb, 0x000010ef )
 
 Input ( "S-Video", svideo )
 	MuxSelect = 2
-	GPIOSet ( 0x0000004fb, 0x0000010ef )
+	GPIOSet ( 0x000004fb, 0x000010ef )
+
+
+[Winfast TV2000 XP Global]
+;from v4l (analog part only), card #61
+AutoDetectID = 0x6f18107d
+DefaultTuner = setup
+
+Input ( "Tuner", tuner)
+	MuxSelect = 0
+	GPIOSet ( 0x00000400, 0x00000000, 0x00000800 )
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+	GPIOSet ( 0x00000400, 0x00000000, 0x00000808 )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x00000400, 0x00000000, 0x00000808 )
+
+
+[Geniatech X8000-MT DVBT]
+;from v4l (analog part only), card #63
+AutoDetectID = 0x885214f1
+DefaultTuner = setup
+
+Input ( "Tuner", tuner)
+	MuxSelect = 0
+	GPIOSet ( 0x00000000, 0x00e3e341 )
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+	GPIOSet ( 0x00000000, 0x00e3e361 )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x00000000, 0x00e3e361 )
+
+
+[DViCO FusionHDTV DVB-T PRO]
+;from v4l (analog part only), card #64
+AutoDetectID = 0xdb3018ac
+DefaultTuner = absent
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+	GPIOSet ( 0x000067df )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x000067df )
+
+
+[DViCO FusionHDTV 7 Gold]
+;from v4l (analog part only), card #65
+AutoDetectID = 0xd61018ac
+DefaultTuner = setup
+
+Input ( "Tuner", tuner)
+	MuxSelect = 0
+	GPIOSet ( 0x000010df )
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+	GPIOSet ( 0x000016d9 )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x000016d9 )
+
+
+[Prolink Pixelview MPEG 8000GT]
+;from v4l (analog part only), card #66
+AutoDetectID = 0x49351554
+DefaultTuner = setup
+
+Input ( "Tuner", tuner)
+	MuxSelect = 0
+	GPIOSet ( 0x000000ff, 0x00000000, 0x00000cfb )
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+	GPIOSet ( 0x000000ff, 0x00000000, 0x00000cfb )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x000000ff, 0x00000000, 0x00000cfb )
+
+
+[Kworld PlusTV HD PCI 120 (ATSC 120)]
+;from v4l (analog part only), card #67
+AutoDetectID = 0x08c117de
+DefaultTuner = setup
+
+Input ( "Tuner", tuner)
+	MuxSelect = 0
+	GPIOSet ( 0x000000ff, 0x0000f35d )
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+	GPIOSet ( 0x000000ff, 0x0000f37e )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x000000ff, 0x0000f37e )
+
+
+[Hauppauge WinTV-HVR4000 DVB-S/S2/T/Hybrid]
+;from v4l (analog part only), card #68
+;Todo: WM8775 ADC audio
+AutoDetectID = 0x69000070, 0x69040070, 0x69020070
+DefaultTuner = philips_fmd1216me_mk3
+
+Input ( "Tuner", tuner)
+	MuxSelect = 0
+	GPIOSet ( 0x0000c4bf )
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+	GPIOSet ( 0x0000c4bf )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x0000c4bf )
+
+;TDA9887 settings not tested - just copied from Leadtek WinFast TV2000 XP Expert
+UseTDA9887 ()
+	SetModes ( pal-bg   ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( pal-i    ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( pal-dk   ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( ntsc-m   ) = { intercarrier, OutputPort1 = active }
+	SetModes ( secam-l  ) = { OutputPort2 = active }
+
+
+[Terratec Cinergy HT PCI MKII]
+;from v4l (analog part only), card #78
+AutoDetectID = 0x1177153b
+DefaultTuner = setup
+
+Input ( "Tuner", tuner)
+	MuxSelect = 0
+	GPIOSet ( 0x000004ff, 0x000010ff, 0x00000001 )
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+	GPIOSet ( 0x000004fb, 0x000010ef )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x000004fb, 0x000010ef )
 
 
 ; ***** Tuner list: (as at July 2005) *****
