new card added, thanks to captain-shiny from Forum

--- a/DScaler/Release/SAA713xCards.ini
+++ b/DScaler/Release/SAA713xCards.ini
@@ -1389,24 +1389,25 @@ AutoDetectID = 0x48451043
 UseTDA9887 = yes
  
 Input ( "Tuner", tuner )
- VideoPin = 1
- AudioPin = dac
+    VideoPin = 1
+    AudioPin = dac
  
 Input ( "Composite", composite )
- VideoPin = 3
- AudioPin = line2
+    VideoPin = 3
+    AudioPin = line2
  
 Input ( "S-Video", svideo )
- VideoPin = 0
- AudioPin = line2
+    VideoPin = 0
+    AudioPin = line2
  
-Input ( "Radio", radio )
- AudioPin = line2
+ Input ( "Radio", radio )
+    AudioPin = line2
+
 
 [MSI TV@nywhere Plus]
-DeviceID     = 0x7133
+DeviceID = 0x7133
 DefaultTuner = philips_tda8275
-GPIOMask     = 0x39E700
+GPIOMask = 0x39E700
 AutoDetectID = 0x62311462
 AudioCrystal = 32MHz
 
@@ -1427,6 +1428,31 @@ Input ("S-Video", svideo)
 
 Final ()
     GPIOSet(0x16400, 0x39E700)
+    
+
+[MSI TV@nywhere Pro (Pal)]
+;Thanks "captain-shiny" from Forum
+DeviceID = 0x7134
+DefaultTuner = tena_9533_di
+GPIOMask = 0x700
+AudioCrystal = 32MHz
+AutoDetectID = 0x88031462
+
+Input ( "Tuner", tuner )
+    VideoPin = 1
+    AudioPin = dac
+    GPIOSet( 0x100, 0x700 )
+
+Input ( "Composite", composite )
+    VideoPin = 3
+    AudioPin = line1
+    GPIOSet( 0x200, 0x700 )
+
+Input ( "S-Video", svideo )
+    VideoPin = 0
+    AudioPin = line1
+    GPIOSet( 0x200, 0x700 )
+    
 
 ; ***** Tuner list: (as at July 2005) *****
 ; auto                        -2
